<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EspaciosComunesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/ec_totem" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/ec_cafeteria" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/ec_comedor" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/ec_biblioteca" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/ec_secretaria" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/ec_salondeactos" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/ec_salondegrados" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>