<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiciosExternos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageButton
                    android:id="@+id/se_secretaria"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/se_secretaria_general"
                    android:src="@drawable/secretaria_gen"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/se_secretaria_general" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageButton
                    android:id="@+id/se_becas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/se_servicio_de_becas"
                    android:src="@drawable/becas"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/se_servicio_de_becas" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageButton
                    android:id="@+id/se_csirc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/se_csirc"
                    android:src="@drawable/csirc"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/se_csirc" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageButton
                    android:id="@+id/se_osl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/se_osl"
                    android:src="@drawable/osl"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/se_osl" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageButton
                    android:id="@+id/se_citic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/se_citic"
                    android:src="@drawable/citic"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/se_citic" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageButton
                    android:id="@+id/se_ceprud"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/se_ceprud"
                    android:src="@drawable/ceprud"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/se_ceprud" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>