<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/two"
    tools:context=".RegistraUsuarioActivity">

    <TextView
        android:id="@+id/textoRegistro"
        android:layout_width="298dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="¿Ya tienes una cuenta? Inicia sesión aquí."
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="375dp"
        android:layout_height="105dp"
        android:gravity="center"
        android:text="Crear cuenta nueva "
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_marginStart="5dp"
        android:gravity="left"
        android:text="@string/usuario"
        android:textColor="@color/etsiit"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:gravity="left"
        android:text="@string/contrase_a"
        android:textColor="@color/etsiit"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:gravity="left
"
        android:text="@string/curso"
        android:textColor="@color/etsiit"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#303030"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#505050"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#303030"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#505050"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/boton_entrar"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Spinner
        android:id="@+id/spinnerGrado"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#303030"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="109dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:gravity="left"
        android:hint=""
        android:text="@string/grado"
        android:textColor="@color/etsiit"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#303030"
        android:ems="10"
        android:hint="@string/repita_su_contrase_a"
        android:inputType="textPassword"
        android:shadowColor="@color/purple_200"
        android:textColor="@color/black"
        android:textColorHint="#505050"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextCurso"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#303030"
        android:ems="10"
        android:hint="@string/curso"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#505050"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="291dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:gravity="left"
        android:text="Correo electrónico"
        android:textColor="@color/etsiit"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#303030"
        android:ems="10"
        android:hint="@string/correo_electr_nico"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#505050"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

</androidx.constraintlayout.widget.ConstraintLayout>